[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-simulator"
version = "1.0.0"
description = "A Texas Hold'em Simulator with AI Bots and Local PvP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["poker", "pygame", "simulation", "game"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame-ce>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10" 
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test", "*Tests"]
pythonpath = ["."]